--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,8 @@ body {
 }
 
 .modo-claro {
-    background: linear-gradient(90deg, #9f4951 0%, #1c6b85 50%);
+    background: rgb(63, 94, 251);
+    background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
 }
 
 .modo-oscuro {
@@ -164,6 +165,7 @@ nav .nav-links li a:hover {
     width: 50px;
     height: 50px;
     animation: spin 20s linear infinite;
+    transition: transform 0.1s ease-out;
 }
 
 .bit {
@@ -268,6 +270,179 @@ nav .nav-links li a:hover {
 }
 
 
+.swiper {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 160px;
+    backdrop-filter: blur(5px);
+    background-color: #65656591;
+    border-top: solid 1px #ffffff;
+    border-bottom: solid 1px #ffffff;
+
+}
+
+.swiper-slide {
+    width: 20px;
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    padding: 10px;
+    width: auto;
+    height: 100px;
+}
+
+
+.wrapper {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: fit-content;
+    height: auto;
+}
+
+.wrapper .experiencia {
+    width: 300px;
+    height: 70px;
+    background: #086699;
+    /* fallback for old browsers */
+    background: #086699;
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: #086699;
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-style: none;
+    color: #fff;
+    font-size: 18px;
+    letter-spacing: 3px;
+    font-family: "Poppins", serif;
+    font-weight: 600;
+    outline: none;
+    cursor: pointer;
+    position: relative;
+    top: -420px;
+    padding: 0px;
+    overflow: hidden;
+    transition: all .5s;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
+}
+
+.wrapper .experiencia span {
+    position: absolute;
+    display: block;
+}
+
+.wrapper .experiencia span:nth-child(1) {
+    height: 3px;
+    width: 300px;
+    top: 0px;
+    left: -300px;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0), #f6e58d);
+    border-top-right-radius: 1px;
+    border-bottom-right-radius: 1px;
+    animation: span1 2s linear infinite;
+    animation-delay: 1s;
+}
+
+@keyframes span1 {
+    0% {
+        left: -300px
+    }
+
+    100% {
+        left: 300px;
+    }
+}
+
+.wrapper .experiencia span:nth-child(2) {
+    height: 70px;
+    width: 3px;
+    top: -70px;
+    right: 0px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #f6e58d);
+    border-bottom-left-radius: 1px;
+    border-bottom-right-radius: 1px;
+    animation: span2 2s linear infinite;
+    animation-delay: 2s;
+}
+
+@keyframes span2 {
+    0% {
+        top: -70px;
+    }
+
+    100% {
+        top: 70px;
+    }
+}
+
+.wrapper .experiencia span:nth-child(3) {
+    height: 3px;
+    width: 300px;
+    right: -300px;
+    bottom: 0px;
+    background: linear-gradient(to left, rgba(0, 0, 0, 0), #f6e58d);
+    border-top-left-radius: 1px;
+    border-bottom-left-radius: 1px;
+    animation: span3 2s linear infinite;
+    animation-delay: 3s;
+}
+
+@keyframes span3 {
+    0% {
+        right: -300px;
+    }
+
+    100% {
+        right: 300px;
+    }
+}
+
+.wrapper .experiencia span:nth-child(4) {
+    height: 70px;
+    width: 3px;
+    bottom: -70px;
+    left: 0px;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0), #f6e58d);
+    border-top-right-radius: 1px;
+    border-top-left-radius: 1px;
+    animation: span4 2s linear infinite;
+    animation-delay: 4s;
+}
+
+@keyframes span4 {
+    0% {
+        bottom: -70px;
+    }
+
+    100% {
+        bottom: 70px;
+    }
+}
+
+.wrapper .experiencia:hover {
+    transition: all .5s;
+    transform: rotate(-3deg) scale(1.1);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, .4);
+}
+
+.wrapper .experiencia:hover span {
+    animation-play-state: paused;
+}
+
+
+
+
+@media (max-width: 760px) {
+    .swiper {
+        width: 100%;
+    }
+
+}
 
 
 @keyframes spin {
