--- a/public/css/style.css
+++ b/public/css/style.css
@@ -509,4 +509,8 @@ nav .nav-links li a:hover {
         width: 300px;
         height: 300px;
     }
+
+    .wrapper .experiencia {
+        top: -515px;
+    }
 }
