--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,9 +33,23 @@ body {
 }
 
 .modo-claro {
-    background: rgb(63, 94, 251);
-    background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
+    background-color: #3f3f3f;
+    background-image: linear-gradient(90deg, #111874 0%, #4a0e66 100%);
+
+    background-size: 300% 300%;
+    animation: gradientAnimation 3s infinite alternate;
 }
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    100% {
+        background-position: 100% 50%;
+    }
+}
+
 
 .modo-oscuro {
     background-color: #000;
