--- a/public/css/style.css
+++ b/public/css/style.css
@@ -450,6 +450,41 @@ nav .nav-links li a:hover {
 
 
 
+iframe {
+    position: fixed;
+    z-index: 1000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    ;
+}
+
+
+.music {
+    display: flex;
+    z-index: 10000;
+    position: fixed;
+    bottom: 0;
+    align-items: center;
+    border-radius: 20px;
+    background-color: #4d4c4c70;
+    color: #ffffff;
+    backdrop-filter: blur(25px);
+    border: 1px solid #ffffff;
+    padding: 10px;
+    width: 100%;
+}
+
+.button-play {
+    background: white;
+    border: none;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.input-play[type="range"] {
+    width: auto;
+}
+
 
 @media (max-width: 760px) {
     .swiper {
